--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME = fpointclass
-HEADER = Fixed.hpp
-FUNCTIONS = main Fixed
+HEADER = ClapTrap.hpp
+FUNCTIONS = main ClapTrap
 
 CC = clang++
 CFLAGS = -Wall -Wextra -Werror
