--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ file(GLOB EX00 ex00/*.cpp ex00/*.hpp)
 add_executable(ex00 ${EX00})
 
 
-#file(GLOB EX01 ex01/*.cpp ex01/*.hpp)
-#add_executable(ex01 ${EX01})
+file(GLOB EX01 ex01/*.cpp ex01/*.hpp)
+add_executable(ex01 ${EX01})
 #
 #
 #file(GLOB EX02 ex02/*.cpp ex02/*.hpp)
